# rtsper

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README.md
rtsper/: __init__.py  auth.py  exceptions.py  rtp.py  sdp.py  session.py  transport.py  utils.py
tests/: test_rtsper_full.py
