[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtsper"
version = "0.1"
description = "Modern RTSP client SDK (sync + async)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name="Mohamed Elbadry", email=""}]
dependencies = [ "pytest", "pytest-asyncio"]
